[gd_scene load_steps=19 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://player/crosshair.png" type="Texture" id=2]
[ext_resource path="res://assets/weapons/crossbow.png" type="Texture" id=3]
[ext_resource path="res://assets/heart.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/Crossbow_Shot.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/pixeloid-font/PixeloidMono-d94EV.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/weapons/firewand.png" type="Texture" id=7]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.36
emission_shape = 5
emission_ring_radius = 2.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, -20, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 5.0
damping = 5.0
angle = 180.0
angle_random = 0.45
scale = 5.86
scale_random = 0.46

[sub_resource type="Gradient" id=8]
interpolation_mode = 2
colors = PoolColorArray( 0.905882, 0.368627, 0, 1, 0.992188, 0.348816, 0, 0.329412 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )
width = 1

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.28655, 0.795322 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.169017, 0, 1, 1, 0.431373, 0, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="Animation" id=6]
length = 0.001

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/Crossbow:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Control/FireWand:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/Crossbow:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Control/FireWand:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 1 ]
}

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )
RichTextLabel/colors/default_color = Color( 0, 0, 0, 1 )

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="Crossbow" type="Sprite" parent="CanvasLayer/Control"]
position = Vector2( 0, -186 )
scale = Vector2( 6, 6 )
texture = ExtResource( 3 )
hframes = 5
frame = 1

[node name="FireWand" type="Sprite" parent="CanvasLayer/Control"]
visible = false
position = Vector2( 0, -186 )
scale = Vector2( 6, 6 )
z_index = 1
texture = ExtResource( 7 )
hframes = 2
frame = 1

[node name="Particles2D" type="Particles2D" parent="CanvasLayer/Control"]
modulate = Color( 1, 0.584314, 0, 1 )
position = Vector2( 8, -178 )
scale = Vector2( 4, 4 )
emitting = false
amount = 64
speed_scale = 2.5
explosiveness = 0.1
randomness = 0.22
draw_order = 1
process_material = SubResource( 7 )
texture = SubResource( 9 )
normal_map = SubResource( 11 )

[node name="Heart1" type="Sprite" parent="CanvasLayer"]
position = Vector2( 54, 556 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )

[node name="Heart2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 53, 470 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )

[node name="Heart3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 52, 386 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )

[node name="Heart4" type="Sprite" parent="CanvasLayer"]
position = Vector2( 51, 298 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )

[node name="Heart5" type="Sprite" parent="CanvasLayer"]
position = Vector2( 51, 207 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/idle = SubResource( 2 )
anims/shoot = SubResource( 3 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -2000 )

[node name="crossbowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="HUDInstructionText" type="RichTextLabel" parent="."]
visible = false
margin_left = 204.0
margin_top = 91.0
margin_right = 854.0
margin_bottom = 254.0
theme = SubResource( 5 )
text = "~ ALL ENEMIES DEFEATED ~
    Press \"R\" to do it again."
